--- a/The Attention Mechanisms.ipynb
+++ b/The Attention Mechanisms.ipynb
@@ -191,6 +191,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Attention mechanisms are at the core of various machine learning and deep learning models, and they rely on mathematical formulas to compute attention scores and attention weights. The formulas and numerical representations used in attention mechanisms can vary depending on the specific type of attention mechanism (e.g., additive, scaled dot-product, etc.). I'll provide an overview of the common components and formulas used in attention mechanisms.\n",
+    "\n",
+    "**Components of Attention Mechanisms**:\n",
+    "\n",
+    "1. **Query (Q)**: A vector that represents what you want to focus on or retrieve information about.\n",
+    "\n",
+    "2. **Key (K)**: A set of vectors representing elements in the input data.\n",
+    "\n",
+    "3. **Value (V)**: Corresponding values for each key, providing information associated with each element.\n",
+    "\n",
+    "4. **Attention Scores (e.g., Scaled Dot-Product Attention)**: The attention mechanism computes attention scores using a formula such as the scaled dot-product attention:\n",
+    "\n",
+    "   - Scaled Dot-Product Attention:\n",
+    "     - Formula:  `Attention(Q, K) = softmax(Q * K^T / sqrt(d_k))`\n",
+    "     - Here, `^T` denotes the transpose, and `d_k` is the dimension of the key vectors. The division by `sqrt(d_k)` is used to scale the dot products, which helps stabilize training.\n",
+    "\n",
+    "   - Additive Attention (Bahdanau Attention):\n",
+    "     - Formula: `Attention(Q, K) = softmax(v^T * tanh(W_q * Q + W_k * K))`\n",
+    "     - In this formula, `v`, `W_q`, and `W_k` are learnable parameters.\n",
+    "\n",
+    "5. **Attention Weights**: The attention scores are normalized using the softmax function to obtain attention weights, which indicate how much focus should be given to each element in the input data.\n",
+    "\n",
+    "   - Formula: `Attention Weights = softmax(Attention Scores)`\n",
+    "\n",
+    "6. **Weighted Sum**: The final output is obtained by taking a weighted sum of the values, where the weights are determined by the attention weights.\n",
+    "\n",
+    "   - Formula: `Output = Attention Weights * Values`\n",
+    "\n",
+    "These are the key components and formulas used in attention mechanisms. Depending on the specific application, you may also encounter variations or additional components, such as multi-head attention, positional encoding, and masking, which are used to improve the performance and robustness of attention mechanisms in different scenarios."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# The General Attention Mechanism with NumPy and SciPy"
    ]
   },
