--- a/Transformer Architecture.ipynb
+++ b/Transformer Architecture.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Transformer Architecture**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# What is Transformer Architecture?\n",
     "\n",
     "The Transformer architecture is a deep learning model introduced in the paper \"Attention Is All You Need\" by Vaswani et al. in 2017. It has revolutionized the field of natural language processing (NLP) and become the foundation for many state-of-the-art NLP models, such as BERT, GPT, and more. The Transformer architecture is not limited to NLP and can be applied to various sequence-to-sequence tasks, including machine translation, text summarization, and more.\n",
@@ -930,8 +923,8 @@
     "# About Me:\n",
     "\n",
     "## **Ahmad Raza**\n",
-    "## **LinkedIn Profile** => https://www.linkedin.com/in/Ahmad10Raza\n",
-    "## **GitHub Profile** => https://github.com/Ahmad10Raza"
+    "## **LinkedIn Profile** => [https://www.linkedin.com/in/Ahmad10Raza](https://www.linkedin.com/in/Ahmad10Raza)\n",
+    "## **GitHub Profile** => [https://github.com/Ahmad10Raza](https://github.com/Ahmad10Raza)"
    ]
   },
   {
